[gd_scene load_steps=26 format=3 uid="uid://dkgd4863t8pnb"]

[ext_resource type="Script" path="res://non_word_button.gd" id="1_gwgru"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/1.png" id="2_rvatl"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/2.png" id="3_mgdq0"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/3.png" id="4_ysilm"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/4.png" id="5_41akk"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/5.png" id="6_j65y2"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/6.png" id="7_800iu"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/7.png" id="8_erce3"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/8.png" id="9_j86v4"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/9.png" id="10_stahd"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/10.png" id="11_k7skj"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/11.png" id="12_t3wdf"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/12.png" id="13_a3f6i"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/13.png" id="14_cmfqc"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/14.png" id="15_75exm"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/15.png" id="16_38avm"]
[ext_resource type="Texture2D" path="res://word search assets/explosion/16.png" id="17_20kb7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_be7yh"]

[sub_resource type="CanvasTexture" id="CanvasTexture_wga1h"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vqpd3"]
texture = SubResource("CanvasTexture_wga1h")
modulate_color = Color(0.607843, 0.65098, 0.976471, 0.25098)

[sub_resource type="CanvasTexture" id="CanvasTexture_apqnc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2esqg"]
texture = SubResource("CanvasTexture_apqnc")
modulate_color = Color(0.356189, 0.357496, 0.896946, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqdxa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ud5iw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_s42v0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rvatl")
}, {
"duration": 1.0,
"texture": ExtResource("3_mgdq0")
}, {
"duration": 1.0,
"texture": ExtResource("4_ysilm")
}, {
"duration": 1.0,
"texture": ExtResource("5_41akk")
}, {
"duration": 1.0,
"texture": ExtResource("6_j65y2")
}, {
"duration": 1.0,
"texture": ExtResource("7_800iu")
}, {
"duration": 1.0,
"texture": ExtResource("8_erce3")
}, {
"duration": 1.0,
"texture": ExtResource("9_j86v4")
}, {
"duration": 1.0,
"texture": ExtResource("10_stahd")
}, {
"duration": 1.0,
"texture": ExtResource("11_k7skj")
}, {
"duration": 1.0,
"texture": ExtResource("12_t3wdf")
}, {
"duration": 1.0,
"texture": ExtResource("13_a3f6i")
}, {
"duration": 1.0,
"texture": ExtResource("14_cmfqc")
}, {
"duration": 1.0,
"texture": ExtResource("15_75exm")
}, {
"duration": 1.0,
"texture": ExtResource("16_38avm")
}, {
"duration": 1.0,
"texture": ExtResource("17_20kb7")
}],
"loop": false,
"name": &"explosion",
"speed": 16.0
}]

[node name="non_word_button" type="Button"]
offset_left = -16.0
offset_top = -18.0
offset_right = 16.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_be7yh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vqpd3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2esqg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_eqdxa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ud5iw")
script = ExtResource("1_gwgru")

[node name="explosion" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(17, 22)
sprite_frames = SubResource("SpriteFrames_s42v0")
animation = &"explosion"
frame = 8
frame_progress = 0.142795

[node name="explosionSound" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="animation_finished" from="explosion" to="." method="_on_explosion_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
